--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,7 @@ h4, h5, h6 {
 }
 
 span.color {
-	color: #0feb9e;
+	  color: #022334;
 }
 
 body > section,
@@ -144,7 +144,11 @@ body > section,
 /*=========================================
 	Header
 ==========================================*/
-
+.transparencia{
+  width: 100%;
+  height: 300px;
+  background-color: black;
+}
 #navigation {
   background-color: rgba(2, 35, 52, 0);
   border: 0 none;
@@ -165,8 +169,23 @@ body > section,
   padding: 0;
 }
 
+/* @font-face
+{
+ font-family: 'miFuenteIE';
+ src: url('fuenteIE.eot');
+} */
+
+@font-face
+{
+ font-family: 'Gobold';
+ src: url('../fonts/Sunday.ttf');
+}
+
 .navbar-nav li a {
+  font-family:Gobold;
+  font-size: 17px;
 	border-top: 1px solid transparent;
+
 }
 
 .navbar-nav li a.current,
@@ -187,7 +206,9 @@ body > section,
 #slider {
 	padding: 0;
 }
+#slider .carousel-inner{
 
+}
 #slider .carousel-inner .item {
   background-size: cover;
 }
@@ -199,6 +220,8 @@ body > section,
 .carousel-caption h2 {
   font-size: 62px;
   font-weight: 300;
+  /* border-color: solid 70px 20px 20px; */
+  text-shadow:5px 5px 20px #000000;
 }
 
 .carousel-caption h2 span {
@@ -209,6 +232,8 @@ body > section,
   font-size: 48px;
   font-weight: 300;
   margin: 6px 0 20px;
+  border-color: solid 20px;
+  text-shadow:5px 5px 20px #000000;
 }
 
 .carousel-caption p {
@@ -242,9 +267,12 @@ top: -8px;
 }
 
 .social-links li a {
-  color: rgba(255, 255, 255, 0.3);
+  /* color: #022334; */
+    color: #ffffff;
   display: block;
   margin: 0 6px;
+  font-size:25px;
+  text-shadow:5px 5px 20px #000000;
 }
 
 .social-links li a:hover {
@@ -252,23 +280,34 @@ top: -8px;
 }
 
 .carousel-indicators {
-  bottom: 10px;
+  /* bottom: 10px; */
+  /* left: 50%;
+  bottom: : 10%; */
   left: inherit;
+  top: 49%;
   margin: 0;
   right: 30px;
-  top: 49%;
   width: 0;
+}
+
+.carousel-indicators {
+  /* list-style-type: decimal;
+  width: 45px;
+  height: 45px; */
 }
 
 .carousel-indicators li {
   border: 1px solid rgba(255, 255, 255, 0.3);
-  height: 8px;
-  width: 8px;
+  height: 10px;
+  width: 10px;
+  /* float: left; */
+
 }
 
+
 .carousel-indicators .active {
-  height: 8px;
-  width: 8px;
+  height: 12px;
+  width: 12px;
 }
 
 
@@ -359,30 +398,40 @@ top: -8px;
   color: #fff;
   padding: 5px 17px;
 }
+.project-wrapper{
+
+}
 
 .mix {
     display: none;
+float: left;
+  /* margin: 0 auto; */
 }
 
 .work-item {
-    float: left;
     width: 33.3333334%;
     position: relative;
     overflow: hidden;
+    /* margin: 0px 0px 0px; */
+    /* padding: 0px 0px 5px; */
     cursor: pointer;
     text-shadow:5px 5px 20px #000000;
 }
 
 
 .work-item img{
+    width: 100%;
+  /* justify-content: center; */
+    /* margin: 10px 10px 0px; */
     opacity: 0.7;
     transition: 0.4s;
 }
 
 .work-item:hover img {
+  max-height: 100%;
   opacity: 1;
   transition: 0.4s;
-  transform: scale(1.4) rotate(15deg);
+  transform: scale(1.4);
 }
 
 .work-item > img {
@@ -723,7 +772,16 @@ label.error {
 
 .footer-single {
   line-height: 24px;
+  text-align: center;
+  margin-left: 10px;
+  margin-right: 10px;
 }
+
+.footer-single .permisos{
+  text-align: justify;
+
+}
+
 
 .footer-single ul {
   }
@@ -747,6 +805,9 @@ label.error {
 .copyright {
   color: #fff;
   margin-top: 100px;
+}
+.footerfondo{
+  background: #ffffff;
 }
 
 #back-top {
