--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,45 @@ h4, h5, h6 {
 	margin: 0;
 }
 
+#logo img{
+  padding-top: 30px;
+  width:200px;
+  padding-left: 20px;
+/* box-shadow:5px 5px 20px rgba(0, 0, 0, 0.5); */
+}
+
+.quiensoy{
+	/* border:1px solid; */
+  /* width:100%; */
+  margin:5px;
+    overflow: hidden;
+      /* width:100%; */
+  		height:380px;
+  		/* line-height:300px; */
+  	  /* justify-content: center; */
+/* box-shadow:10px 10px 50px rgba(0, 0, 0, 0.2);; */
+box-shadow: 1px 10px 50px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+
+}
+.quiensoy img{
+
+  width: 100%;
+  height: inherit;
+  display:inline-block;
+	vertical-align:middle;
+	line-height:normal;
+}
+
+.quiensoy h4{
+  /* padding: 10px; */
+		line-height:35px;
+  /* centrar vertical y horizontal */
+  /* display:inline-block;
+  vertical-align:middle;
+  line-height:normal; */
+}
+
 .parrafo1{
  text-align: justify;
  margin: 0px 40px;
@@ -75,7 +114,8 @@ span.color {
 
 body > section,
 .footer {
-	padding: 70px 0;
+	padding: 40px 0;
+  /* footer espacio */
 }
 
 .sec-title {}
@@ -153,6 +193,7 @@ body > section,
   background-color: rgba(2, 35, 52, 0);
   border: 0 none;
   margin: 0;
+  /* height: 100px; */
 
     -webkit-transition: background-color 800ms linear;
        -moz-transition: background-color 800ms linear;
@@ -181,6 +222,10 @@ body > section,
  src: url('../fonts/Sunday.ttf');
 }
 
+.navbar-nav{
+  margin-top: 10px;
+}
+
 .navbar-nav li a {
   font-family:Gobold;
   font-size: 17px;
@@ -202,9 +247,11 @@ body > section,
 /*=========================================
 	Slider
 ==========================================*/
-
 #slider {
+  /* background-color: #000000; */
 	padding: 0;
+  /* clip-path: rect(10px, 20px, 30px, 40px); */
+  clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
 }
 #slider .carousel-inner{
 
@@ -260,15 +307,21 @@ top: -8px;
 
 .social-links {
   margin-top: 5%;
+
 }
 
 .social-links li {
 	display: inline-block;
 }
 
+.social-links img {
+width: 50px;
+
+}
+
 .social-links li a {
   /* color: #022334; */
-    color: #ffffff;
+  color: #ffffff;
   display: block;
   margin: 0 6px;
   font-size:25px;
@@ -277,6 +330,17 @@ top: -8px;
 
 .social-links li a:hover {
   color: #fff;
+}
+
+.whatsapp img{
+  width: 120px;
+  /* padding:5px; */
+}
+
+.whatsapp h3{
+  font-size: 30px;
+  color: #ffffff;
+  /* padding:5px; */
 }
 
 .carousel-indicators {
@@ -290,11 +354,7 @@ top: -8px;
   width: 0;
 }
 
-.carousel-indicators {
-  /* list-style-type: decimal;
-  width: 45px;
-  height: 45px; */
-}
+
 
 .carousel-indicators li {
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -312,12 +372,15 @@ top: -8px;
 
 
 
+
+
 /*=========================================
 	Features
 ==========================================*/
 
 .features {
-  background-color: #f4f7f9;
+  background-color: #ffffff;
+    /* clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%); */
 }
 
 .owl-controls {
@@ -372,7 +435,18 @@ top: -8px;
 /*=========================================
 	Our Works
 ==========================================*/
-
+.works{
+  background-color: #ffffff;
+  /* border-style: solid;
+  border-color: #CCCDCD;
+border-width: 10px 0 10px 0; */
+    clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%);
+    /* filter: drop-shadow(-1px 6px 3px rgba(50, 50, 0, 0.5)); */
+     /* box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5); */
+     box-shadow:inset 10px 5px 200px 5px rgba(0,0,0,0.1) ;
+    padding-top: 90px;
+    padding-bottom: 90px;
+}
 .work-filter {
   margin-bottom: 35px;
 }
@@ -401,19 +475,31 @@ top: -8px;
 .project-wrapper{
 
 }
+.container{
 
+}
 .mix {
     display: none;
-float: left;
-  /* margin: 0 auto; */
+    /* float: left; */
+/* box-shadow:5px 5px 20px rgba(0, 0, 0, 0.5); */
+box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+/* margin: 5px; */
+  float: left;
+    margin: 10px;
+
+}
+.mix img{
+
+
+
 }
 
 .work-item {
-    width: 33.3333334%;
-    position: relative;
+width: 30%;
+    /* width: 33.3333334%; */
     overflow: hidden;
-    /* margin: 0px 0px 0px; */
-    /* padding: 0px 0px 5px; */
+    position: relative;
     cursor: pointer;
     text-shadow:5px 5px 20px #000000;
 }
@@ -507,6 +593,7 @@ float: left;
 .work-item .overlay p {
   font-size: 14px;
   line-height: 24px;
+  color: #006382;
 }
 
 
@@ -636,11 +723,18 @@ float: left;
 ==========================================*/
 
 .contact {
-	padding-bottom: 0;
+  /* margin-top: 0; */
+	padding-top: 70px;
+background-image: url(../img/slide-banner3-3-72px-1920x1280.jpg);
+background-size: cover;
+clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%);
+/* height: 900px; */
+/* background-color: rgba(2, 35, 52, 1); */
+
 }
 
 .contact-address h3 {
-  color: #062033;
+  color: #ffffff;
   font-size: 22px;
   line-height: 32px;
   margin-bottom: 25px;
@@ -648,12 +742,41 @@ float: left;
 
 .contact-address p {
   line-height: 24px;
+    font-size: 16px;
+    color: #ffffff;
 }
 
 .contact-form {}
 
+  .works .sec-title h2{
+    color: #5DBCD2;
+  }
+
+  .works .sec-sub-title p{
+    color: #5DBCD2;
+  }
+
+  .features .sec-title h2{
+    color: #5DBCD2;
+  }
+
+
+.sec-title h2{
+  color: #ffffff;
+}
+.sec-sub-title p{
+  color: #ffffff;
+}
+
+.sec-sub-title #parrafocontacto{
+  color: #ffffff;
+  font-size: 20px;
+  margin: 5px;
+  text-align: center;
+}
+
 .contact-form h3 {
-  color: #062033;
+  color: #ffffff;
   font-size: 24px;
   font-weight: 700;
   line-height: 32px;
@@ -696,7 +819,7 @@ label.error {
 .contact-form #form-submit {
   background: url("../img/envelop.png") no-repeat scroll 0 15px transparent;
   border: 0 none;
-  color: #000;
+  color: #ffffff;
   font-size: 16px;
   line-height: 24px;
   padding: 10px;
@@ -724,12 +847,21 @@ label.error {
 /*=========================================
 	Contact Us
 ==========================================*/
+.espacio{
+  padding-top: 40px;
+}
 
+.espacio2{
+  padding-top: 150px;
+}
 
 .footer {
+  /* background-color: #022334; */
   background-color: #022334;
   border-top: 5px solid #062033;
   color: #fff;
+  /* clip-path: polygon(0 10%, 100% 0, 100% 100%, 0 100%); */
+
 }
 
 .footer a:hover {
@@ -776,14 +908,17 @@ label.error {
   margin-left: 10px;
   margin-right: 10px;
 }
+.footer-single img{
+width: 35%;
+}
 
 .footer-single .permisos{
   text-align: justify;
-
 }
 
 
 .footer-single ul {
+
   }
 
 .footer-single li {
@@ -792,6 +927,17 @@ label.error {
 
 .footer-single p i {
   margin: 0 10px;
+}
+
+.footer-redes {
+  line-height: 24px;
+  text-align: center;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.footer-redes img {
+width: 40px;
 }
 
 .credit a {
@@ -804,7 +950,8 @@ label.error {
 
 .copyright {
   color: #fff;
-  margin-top: 100px;
+  margin-top: 10px;
+  margin-bottom: 0px;
 }
 .footerfondo{
   background: #ffffff;
