--- a/css/main.css
+++ b/css/main.css
@@ -51,15 +51,24 @@ h4, h5, h6 {
 }
 
 #logo img{
+  /* opacity: 0.5; */
   padding-top: 30px;
-  width:200px;
-  padding-left: 20px;
+  width:150px;
+  padding: 20px;
+  cursor: auto;
+  background-color: rgba(78, 178, 213, 1);
+  /* border-left: 1px solid #ffffff;
+  border-right: 1px solid #ffffff;
+  border-bottom: 1px solid #ffffff; */
+  clip-path: inset(0 round 0 0 30px 0);
+
 /* box-shadow:5px 5px 20px rgba(0, 0, 0, 0.5); */
 }
 
 .quiensoy{
 	/* border:1px solid; */
   /* width:100%; */
+  background-color: #ffffff;
   margin:5px;
     overflow: hidden;
       /* width:100%; */
@@ -83,6 +92,7 @@ box-shadow: 1px 10px 50px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 .quiensoy h4{
   /* padding: 10px; */
 		line-height:35px;
+
   /* centrar vertical y horizontal */
   /* display:inline-block;
   vertical-align:middle;
@@ -108,8 +118,10 @@ box-shadow: 1px 10px 50px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    *zoom: 1;
 }
 
-span.color {
-	  color: #022334;
+.carousel-caption span.color {
+	  color: #39c2f0;
+    /* font-weight: 600; */
+    /* color:#000; */
 }
 
 body > section,
@@ -122,9 +134,9 @@ body > section,
 
 .sec-title h2 {
   color: #022334;
-  font-size: 28px;
-  font-weight: 800;
-  text-transform: uppercase;
+  font-size: 30px;
+  font-weight: 400;
+  /* text-transform: uppercase; */
 }
 
 .sec-sub-title {
@@ -186,11 +198,14 @@ body > section,
 ==========================================*/
 .transparencia{
   width: 100%;
-  height: 300px;
-  background-color: black;
+  /* height: 300px; */
+  /* background-color: #ffffff; */
 }
 #navigation {
-  background-color: rgba(2, 35, 52, 0);
+  background-color: rgba(78, 178, 213, 1);
+    /* background-color: rgba(46, 46, 46, 1); */
+    /* background-color: rgba(0, 178, 166, 0.9); */
+      /* background-color: #ffffff; */
   border: 0 none;
   margin: 0;
   /* height: 100px; */
@@ -208,6 +223,7 @@ body > section,
 
 .navbar-brand {
   padding: 0;
+    /* height: 30px; */
 }
 
 /* @font-face
@@ -216,29 +232,64 @@ body > section,
  src: url('fuenteIE.eot');
 } */
 
+
 @font-face
 {
- font-family: 'Gobold';
- src: url('../fonts/Sunday.ttf');
+ font-family: 'Rounded_Elegance';
+ src: url('../fonts/Rounded_Elegance.ttf');
+}
+
+@font-face
+{
+ font-family: 'AntipastoPro-DemiBold';
+ src: url('../fonts/AntipastoPro-DemiBold_trial.ttf');
+}
+
+@font-face
+{
+ font-family: 'Montserrat-Regular';
+ src: url('../fonts/Montserrat-Regular.otf');
 }
 
 .navbar-nav{
-  margin-top: 10px;
+  margin-top: 0px;
+}
+
+.navbar-nav ul{
+
+}
+.navbar-nav li{
+}
+
+.navbar-nav a{
+
 }
 
 .navbar-nav li a {
-  font-family:Gobold;
-  font-size: 17px;
+  font-family: Rounded_Elegance;
+  font-size: 15px;
 	border-top: 1px solid transparent;
+  margin-top: 12px;
+  margin-bottom: 5px;
+  padding-top:2px;
+  padding-bottom:2px;
+  /* border-radius: 3px;
+  background-color: #009ab4; */
+      /* border: 1px solid #ffffff; */
 
 }
 
-.navbar-nav li a.current,
+/* .navbar-nav li a.current, */
 .navbar-nav li a:focus,
 .navbar-nav li a:hover {
-	background-color: transparent;
-	border-top: 1px solid #32B0EE;
-	color: #fff;
+  	background-color: transparent;
+	/* background-color: #009ab4; */
+	/* border-top: 1px solid #32B0EE; */
+  border-top: 1px solid #ffffff;
+	/* color: #f9ba48; */
+  color: #D6D6D6;
+
+  /* border: 1px solid #ffffff; */
 }
 
 
@@ -251,47 +302,76 @@ body > section,
   /* background-color: #000000; */
 	padding: 0;
   /* clip-path: rect(10px, 20px, 30px, 40px); */
-  clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
+  /* clip-path: polygon(0 0, 100% 0, 100% 90% ,27% 100% ,0 100%); */
 }
 #slider .carousel-inner{
-
+/* text-align: center; */
 }
 #slider .carousel-inner .item {
+  /* background-size: 100% 100%; */
   background-size: cover;
+  /* background-color: red; */
 }
 
 .carousel-caption {
   top: 40%;
-}
+  left: 0;
+  right: 0;
+  text-shadow : none;
 
+/* width: 100%; */
+  /* display: inline-block; */
+/* margin-left: 400px; */
+/* height: 100%; */
+/* position: relative; */
+ /* height: auto; */
+/* right: 40%; */
+/* text-align: center; */
+/* background-color: black; */
+
+}
+.carousel-caption .carousel-box1{
+  padding-left: 47%;
+}
+.carousel-caption .carousel-box2{
+  padding-right: 47%;
+}
 .carousel-caption h2 {
+  /* margin-left: 400px; */
   font-size: 62px;
-  font-weight: 300;
+  /* font-weight: 400; */
+  color: #0078d9;
   /* border-color: solid 70px 20px 20px; */
-  text-shadow:5px 5px 20px #000000;
+  /* text-shadow:5px 5px 20px #000000; */
+  font-family: Montserrat-Regular;
 }
 
 .carousel-caption h2 span {
-  font-weight: 800;
+  font-weight: 600;
+  font-family: Montserrat-Regular;
 }
 
 .carousel-caption h3 {
+    color: #0078d9;
+  font-family: GeosansLight;
   font-size: 48px;
-  font-weight: 300;
+  /* font-weight: 100; */
+  /* font-weight: 400; */
   margin: 6px 0 20px;
-  border-color: solid 20px;
-  text-shadow:5px 5px 20px #000000;
+  /* border-color: solid 20px; */
+  /* text-shadow:5px 5px 20px #000000; */
 }
 
 .carousel-caption p {
-  color: #fff;
-  font-size: 18px;
+  font-family: GeosansLight;
+      color: #0078d9;
+  font-size: 25px;
   font-weight: 300;
 }
 
 .carousel-caption p:before,
 .carousel-caption p:after {
-color: #0feb9e;
+color: #0078d9;
 content: "___";
 position: relative;
 top: -8px;
@@ -357,9 +437,10 @@ width: 50px;
 
 
 .carousel-indicators li {
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  border: 1px solid rgba(0, 120, 217, 1);
   height: 10px;
   width: 10px;
+  background-color: rgba(0, 120, 217, 1);
   /* float: left; */
 
 }
@@ -368,6 +449,7 @@ width: 50px;
 .carousel-indicators .active {
   height: 12px;
   width: 12px;
+    background-color: rgba(0, 120, 217, 1);
 }
 
 
@@ -378,10 +460,159 @@ width: 50px;
 	Features
 ==========================================*/
 
+@font-face
+{
+ font-family: 'Calisto-MT';
+ src: url('../fonts/Calisto-MT_9070.ttf');
+}
+@font-face
+{
+  font-family: 'Calisto-MT-Bold';
+  src: url('../fonts/Calisto-MT-Bold_9068.ttf');
+}
+@font-face
+{
+ font-family: 'GeosansLight';
+ src: url('../fonts/GeosansLight.ttf');
+}
+
+@font-face
+{
+ font-family: 'Romerio';
+ src: url('../fonts/Romerio.ttf');
+}
 .features {
-  background-color: #ffffff;
+
+  /* background-color: #ffffff; */
+  /* background-image: url(../img/fondos/seccion-diseño2-ver2.jpg); */
+  background-size: cover;
+      /* background-size: 100% 100%; */
+    height: 600px;
+/* background-attachment: fixed; */
     /* clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%); */
 }
+
+.diseñoweb{
+  background-image: url(../img/fondos/seccion-diseño1-ver2.jpg);
+  background-size: cover;
+
+      /* background-size: 100% 100%; */
+    height: 600px;
+  /* background-position: center; */
+    /* height: 600px; */
+        /* padding-bottom: 190px; */
+}
+
+.diseñoweb2{
+  background-image: url(../img/fondos/seccion-diseño4-ver2.jpg);
+  /* background-size: cover; */
+    background-size: 100% 100%;
+    height: 600px;
+}
+
+.diseñoweb2 .container{
+  width: 100%;
+/* margin-left: 1px; */
+}
+
+.cuadroflotante{
+  padding-left: 200px;
+
+  /* margin-left: 300px; */
+    /* background-color: black; */
+    /* padding-left: 170px; */
+  /* background-color: rgba(255, 255, 255, 0.2); */
+/* box-shadow: 1px 10px 50px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+}
+.cuadroflotante h2{
+  /* color: #666565; */
+  color: #0078d9;
+  margin:25px;
+  font-size: 40px;
+  /* font-family: Calisto-MT; */
+    font-family: Montserrat-Regular;
+}
+
+.cuadroflotante h3 {
+  color: #0078d9;
+  font-family: GeosansLight;
+  font-size: 48px;
+  margin: 6px 0 20px;
+}
+.cuadroflotante h3 span{
+  /* color: #0078d9; */
+  color: #39c2f0;
+  /* font-size: 40px; */
+  /* font-weight: 600; */
+  /* font-family: Montserrat-Regular; */
+}
+
+.cuadroflotante h4{
+  color: #666565;
+  /* color: #0078d9; */
+  font-size: 23px;
+  font-family: GeosansLight;
+    /* font-weight: 600; */
+}
+.cuadroflotante img{
+
+  width: 100%;
+  height: inherit;
+  display:inline-block;
+	vertical-align:middle;
+	line-height:normal;
+}
+
+.cuadroflotante .sec-sub-title img{
+
+  width: 40%;
+  margin-top: 30px;
+  margin-left: 28%;
+
+  /* height: inherit;
+  display:inline-block;
+	vertical-align:middle;
+	line-height:normal; */
+}
+
+.cuadroflotante2{
+  padding-top: 20px;
+  margin:5px;
+  /* margin-left: 60px; */
+  /* background-color: rgba(255, 255, 255, 0.2); */
+
+/* box-shadow: 1px 10px 50px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+}
+.cuadroflotante2 h2{
+  color: #0078d9;
+  margin:25px;
+  font-size: 40px;
+  font-family: Montserrat-Regular;
+}
+
+/* .cuadroflotante2 span{
+  color: #2b2b2b;
+  font-size: 40px;
+  font-family: GeosansLight;
+} */
+
+.cuadroflotante2 h3 {
+  color: #0078d9;
+  font-family: GeosansLight;
+  font-size: 40px;
+  margin: 6px 0 20px;
+}
+.cuadroflotante2 h3 span{
+  color: #39c2f0;
+}
+
+.cuadroflotante2 h4{
+  color: #666565;
+  font-size: 23px;
+  font-family: GeosansLight;
+    /* font-weight: 600; */
+}
+
 
 .owl-controls {
   bottom: -45px;
@@ -436,16 +667,18 @@ width: 50px;
 	Our Works
 ==========================================*/
 .works{
-  background-color: #ffffff;
-  /* border-style: solid;
-  border-color: #CCCDCD;
-border-width: 10px 0 10px 0; */
-    clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%);
+  /* background-color: #ffffff; */
+  /* background-image: url(../img/fondos/seccion-diseño5.jpg); */
+  /* background-size: 100% 100%; */
+      /* height: 1200px; */
+      /* background-size: cover; */
+          background-size: 100% 100%;
+    /* clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%); */
     /* filter: drop-shadow(-1px 6px 3px rgba(50, 50, 0, 0.5)); */
      /* box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5); */
-     box-shadow:inset 10px 5px 200px 5px rgba(0,0,0,0.1) ;
+     /* box-shadow:inset 10px 5px 200px 5px rgba(0,0,0,0.1) ; */
     padding-top: 90px;
-    padding-bottom: 90px;
+    padding-bottom: 190px;
 }
 .work-filter {
   margin-bottom: 35px;
@@ -456,52 +689,56 @@ border-width: 10px 0 10px 0; */
 }
 
 .work-filter ul li a {
-  color: #062033;
+  color: #666565;
   display: block;
-  font-size: 14px;
+  font-size: 15px;
   font-weight: 700;
   padding: 5px 17px;
   border-radius: 6px;
   text-transform: capitalize;
+  font-family: GeosansLight;
 }
 
 .work-filter ul li a:hover,
 .work-filter ul li a.active {
-  background-color: #022334;
-  border-radius: 6px;
+  /* background-color: #009ab4; */
+  /* background-color: #0078d9; */
+  background-color: #4eb2d5;
+  border-radius: 2px;
   color: #fff;
   padding: 5px 17px;
 }
 .project-wrapper{
-
+text-align: center;
 }
-.container{
 
-}
 .mix {
-    display: none;
+  display: none;
     /* float: left; */
 /* box-shadow:5px 5px 20px rgba(0, 0, 0, 0.5); */
-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
+/* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+    border:1px solid #D8D8D8;
 /* margin: 5px; */
-  float: left;
-    margin: 10px;
+
+  /* margin: 10px; */
+    /* margin: 5px; */
 
 }
 .mix img{
 
-
-
 }
 
 .work-item {
-width: 30%;
-    /* width: 33.3333334%; */
+  float: left;
+/* width: 30%; */
+/* width: 31%; */
+    width: 33.3333334%;
+    /* height: 400px; */
     overflow: hidden;
     position: relative;
     cursor: pointer;
-    text-shadow:5px 5px 20px #000000;
+    /* border:1px solid #E1E1E1; */
+    /* text-shadow:5px 5px 20px #000000; */
 }
 
 
@@ -509,13 +746,13 @@ width: 30%;
     width: 100%;
   /* justify-content: center; */
     /* margin: 10px 10px 0px; */
-    opacity: 0.7;
+    opacity: 1;
     transition: 0.4s;
 }
 
 .work-item:hover img {
+  /* opacity: 0.7; */
   max-height: 100%;
-  opacity: 1;
   transition: 0.4s;
   transform: scale(1.4);
 }
@@ -533,11 +770,12 @@ width: 30%;
 	text-align: center;
 	position: absolute;
 	left: 0;
-	top: 0;
+	bottom: 0;
 	width: 100%;
-	height: 100%;
-	color: #fff;
-
+	height: 25%;
+	/* color: #00b2a6; */
+  color: #4eb2d5;
+background-color: #ffffff;
 	opacity: 1;
 	filter: alpha(opacity=0);
 
@@ -586,14 +824,19 @@ width: 30%;
 .work-item .overlay h2 {
   font-size: 28px;
   font-weight: 700;
-  line-height: 24px;
-  margin-top: 35%;
+  /* line-height: 24px;
+  margin-top: 35%; */
+  margin-top: 10px;
+  font-family: GeosansLight;
 }
 
 .work-item .overlay p {
-  font-size: 14px;
-  line-height: 24px;
-  color: #006382;
+  font-size: 16px;
+    font-weight: 600;
+  /* line-height: 24px; */
+  color: #666565;
+  text-transform: capitalize;
+  font-family: GeosansLight;
 }
 
 
@@ -723,11 +966,11 @@ width: 30%;
 ==========================================*/
 
 .contact {
-  /* margin-top: 0; */
+  margin-top:200px;
 	padding-top: 70px;
 background-image: url(../img/slide-banner3-3-72px-1920x1280.jpg);
 background-size: cover;
-clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%);
+/* clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%); */
 /* height: 900px; */
 /* background-color: rgba(2, 35, 52, 1); */
 
@@ -742,28 +985,108 @@ clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%);
 
 .contact-address p {
   line-height: 24px;
-    font-size: 16px;
+    font-size: 20px;
     color: #ffffff;
+    font-family: GeosansLight;
+    font-weight: 600;
+}
+
+.contact-address img {
+width: 20%;
+}
+.contact-address {
+/* width: 100%; */
+}
+/* .contact-address  #phone{
+width: 20%;
+} */
+/* centrar li verticalmente */
+.contact-address ul {
+  display: inline-block;
+   vertical-align: middle;
+}
+.contact-address li {
+  margin: 10px;
+ /* vertical-align: middle; */
+}
+.contact-address p {
+	/* display: inline; */
+}
+
+.contact-address .datos {
+margin: 20px;
+}
+
+.contact-address .datos img{
+/* text-align: left; */
+}
+
+.contact-address .datosredes {
+  /* top:50%; */
+margin: 20px;
+}
+
+.contact-address .datosredes img {
+margin: 45px;
+  /* vertical-align: middle; */
 }
 
 .contact-form {}
 
   .works .sec-title h2{
-    color: #5DBCD2;
+    /* color: #2b2b2b; */
+    /* color: #333333; */
+    /* color: #009ab4; */
+    /* color: #39c2f0; */
+    color: #0078d9;
+    font-family: Montserrat-Regular;
   }
 
   .works .sec-sub-title p{
-    color: #5DBCD2;
+    color: #666565;
+
+    font-family: GeosansLight;
+  }
+  .works .sec-sub-title h4{
+    color: #666565;
+    font-size: 23px;
+    font-family: GeosansLight;
   }
 
   .features .sec-title h2{
-    color: #5DBCD2;
+    color: #0078d9;
+    font-family: Montserrat-Regular;
+  }
+  .features .sec-sub-title h4{
+    color: #666565;
+    font-size: 22px;
+    font-family: GeosansLight;
+    text-align: justify;
+    margin: 0px 40px;
+  }
+
+  .contact .sec-title h2{
+    color: #ffffff;
+    font-family: Calisto-MT;
+  }
+  .contact .sec-title h3{
+    color: #ffffff;
+    font-family: Calisto-MT;
+  }
+  .contact .sec-sub-title h4{
+    color: #ffffff;
+    font-size: 23px;
+    font-family: GeosansLight;
+    text-align: justify;
+    font-weight: 600;
+    margin: 0px 40px;
   }
 
 
 .sec-title h2{
   color: #ffffff;
 }
+
 .sec-sub-title p{
   color: #ffffff;
 }
@@ -857,8 +1180,11 @@ label.error {
 
 .footer {
   /* background-color: #022334; */
-  background-color: #022334;
-  border-top: 5px solid #062033;
+  /* background-color: #00b2a6; */
+  /* background-image: url(../img/fondos/footer-color.jpg);
+  background-size: 100% 100%; */
+  background-color: rgba(78, 178, 213, 1);
+  /* border-top: 5px solid #00b2a6; */
   color: #fff;
   /* clip-path: polygon(0 10%, 100% 0, 100% 100%, 0 100%); */
 
