--- a/css/main.css
+++ b/css/main.css
@@ -515,10 +515,20 @@ width: 50px;
 /* margin-left: 1px; */
 }
 
-.cuadroflotante{
-  padding-left: 200px;
+.diseñoweb .container{
+  width: 100%;
+/* margin-left: 1px; */
+}
 
-  /* margin-left: 300px; */
+.cuadroflotante{
+  /* background-color: black; */
+  /* padding-left: 400px;
+  padding-right:  100px; */
+  margin-left: 255px;
+  margin-right: 100px;
+
+  /* padding-left: 500px;
+  padding-right: 100px; */
     /* background-color: black; */
     /* padding-left: 170px; */
   /* background-color: rgba(255, 255, 255, 0.2); */
