--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,7 @@ h4, h5, h6 {
 }
 
 #logo img{
-  /* opacity: 0.5; */
+  opacity: 1;
   padding-top: 30px;
   width:150px;
   padding: 20px;
@@ -162,6 +162,7 @@ body > section,
 .devider:after {
   content: "______________________";
   color: #e6e8ea;
+    /* color: #0078d9; */
   position: relative;
   bottom: 6px;
 }
@@ -299,21 +300,29 @@ body > section,
 	Slider
 ==========================================*/
 #slider {
-  /* background-color: #000000; */
 	padding: 0;
   /* clip-path: rect(10px, 20px, 30px, 40px); */
   /* clip-path: polygon(0 0, 100% 0, 100% 90% ,27% 100% ,0 100%); */
 }
+/* SLIDER HEIGHT */
+#slider {
+    height: 1000px;
+}
+.carousel.slide{
+height: 1000px;
+}
 #slider .carousel-inner{
-/* text-align: center; */
+height: 1000px;
 }
 #slider .carousel-inner .item {
+  height: 1000px;
   /* background-size: 100% 100%; */
   background-size: cover;
   /* background-color: red; */
 }
 
 .carousel-caption {
+
   top: 40%;
   left: 0;
   right: 0;
@@ -482,9 +491,9 @@ width: 50px;
  src: url('../fonts/Romerio.ttf');
 }
 .features {
-
+/* padding-top: 10px; */
   /* background-color: #ffffff; */
-  /* background-image: url(../img/fondos/seccion-diseño2-ver2.jpg); */
+  background-image: url(../img/fondos/seccion-quiensoy.jpg);
   background-size: cover;
       /* background-size: 100% 100%; */
     height: 600px;
@@ -493,7 +502,7 @@ width: 50px;
 }
 
 .diseñoweb{
-  background-image: url(../img/fondos/seccion-diseño1-ver2.jpg);
+  background-image: url(../img/fondos/seccion-diseñoweb.jpg);
   background-size: cover;
 
       /* background-size: 100% 100%; */
@@ -503,17 +512,6 @@ width: 50px;
         /* padding-bottom: 190px; */
 }
 
-.diseñoweb2{
-  background-image: url(../img/fondos/seccion-diseño4-ver2.jpg);
-  /* background-size: cover; */
-    background-size: 100% 100%;
-    height: 600px;
-}
-
-.diseñoweb2 .container{
-  width: 100%;
-/* margin-left: 1px; */
-}
 
 .diseñoweb .container{
   width: 100%;
@@ -526,13 +524,6 @@ width: 50px;
   padding-right:  100px; */
   margin-left: 255px;
   margin-right: 100px;
-
-  /* padding-left: 500px;
-  padding-right: 100px; */
-    /* background-color: black; */
-    /* padding-left: 170px; */
-  /* background-color: rgba(255, 255, 255, 0.2); */
-/* box-shadow: 1px 10px 50px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
 }
 .cuadroflotante h2{
   /* color: #666565; */
@@ -585,13 +576,25 @@ width: 50px;
 	line-height:normal; */
 }
 
-.cuadroflotante2{
-  padding-top: 20px;
-  margin:5px;
-  /* margin-left: 60px; */
-  /* background-color: rgba(255, 255, 255, 0.2); */
 
-/* box-shadow: 1px 10px 50px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+.diseñoweb2{
+  background-image: url(../img/fondos/seccion-diseño4-ver2.jpg);
+  background-size: cover;
+    /* background-size: 100% 100%; */
+    height: 600px;
+}
+
+.diseñoweb2 .container{
+  width: 100%;
+/* margin-left: 1px; */
+}
+
+.cuadroflotante2{
+  /* background-color: black; */
+  padding-top: 10px;
+
+  padding: 20px;
+  margin-left: 30px;
 }
 .cuadroflotante2 h2{
   color: #0078d9;
@@ -607,9 +610,11 @@ width: 50px;
 } */
 
 .cuadroflotante2 h3 {
+  text-align: justify;
+/* word-spacing:-2px; */
   color: #0078d9;
   font-family: GeosansLight;
-  font-size: 40px;
+  font-size: 33px;
   margin: 6px 0 20px;
 }
 .cuadroflotante2 h3 span{
@@ -678,17 +683,19 @@ width: 50px;
 ==========================================*/
 .works{
   /* background-color: #ffffff; */
-  /* background-image: url(../img/fondos/seccion-diseño5.jpg); */
+  background-image: url(../img/fondos/seccion-trabajos.jpg);
   /* background-size: 100% 100%; */
-      /* height: 1200px; */
-      /* background-size: cover; */
-          background-size: 100% 100%;
-    /* clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%); */
-    /* filter: drop-shadow(-1px 6px 3px rgba(50, 50, 0, 0.5)); */
-     /* box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5); */
-     /* box-shadow:inset 10px 5px 200px 5px rgba(0,0,0,0.1) ; */
-    padding-top: 90px;
-    padding-bottom: 190px;
+      background-size: cover;
+      background-position: center;
+          /* background-position:  30% 0; */
+        height: 1400px;
+    /* padding-top: 90px; */
+    margin-bottom: 20px;
+}
+.works .container{
+  height:auto;
+  background-size: cover;
+margin-top: 90px;
 }
 .work-filter {
   margin-bottom: 35px;
@@ -1077,7 +1084,7 @@ margin: 45px;
 
   .contact .sec-title h2{
     color: #ffffff;
-    font-family: Calisto-MT;
+    font-family: Montserrat-Regular;
   }
   .contact .sec-title h3{
     color: #ffffff;
@@ -1273,7 +1280,7 @@ width: 35%;
 }
 
 .footer-redes img {
-width: 40px;
+width: 35px;
 }
 
 .credit a {
