--- a/css/main.css
+++ b/css/main.css
@@ -65,40 +65,6 @@ h4, h5, h6 {
 /* box-shadow:5px 5px 20px rgba(0, 0, 0, 0.5); */
 }
 
-.quiensoy{
-	/* border:1px solid; */
-  /* width:100%; */
-  background-color: #ffffff;
-  margin:5px;
-    overflow: hidden;
-      /* width:100%; */
-  		height:380px;
-  		/* line-height:300px; */
-  	  /* justify-content: center; */
-/* box-shadow:10px 10px 50px rgba(0, 0, 0, 0.2);; */
-box-shadow: 1px 10px 50px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
-
-}
-.quiensoy img{
-
-  width: 100%;
-  height: inherit;
-  display:inline-block;
-	vertical-align:middle;
-	line-height:normal;
-}
-
-.quiensoy h4{
-  /* padding: 10px; */
-		line-height:35px;
-
-  /* centrar vertical y horizontal */
-  /* display:inline-block;
-  vertical-align:middle;
-  line-height:normal; */
-}
-
 .parrafo1{
  text-align: justify;
  margin: 0px 40px;
@@ -316,9 +282,10 @@ height: 1000px;
 }
 #slider .carousel-inner .item {
   height: 1000px;
-  /* background-size: 100% 100%; */
   background-size: cover;
-  /* background-color: red; */
+}
+#slide1{
+  background-image: url(../img/slider/banner-inicio1.jpg);
 }
 
 .carousel-caption {
@@ -501,6 +468,28 @@ width: 50px;
     /* clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%); */
 }
 
+.quiensoy{
+	/* border:1px solid; */
+  /* width:100%; */
+  background-color: #ffffff;
+  margin:5px;
+  overflow: hidden;
+  width:500px;
+  height:360px;
+  box-shadow: 1px 10px 50px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.quiensoy img{
+  width: 100%;
+  /* height: inherit;
+  display:inline-block;
+	vertical-align:middle;
+	line-height:normal; */
+}
+
+.quiensoy h4{
+		line-height:35px;
+}
+
 .diseñoweb{
   background-image: url(../img/fondos/seccion-diseñoweb.jpg);
   background-size: cover;
@@ -569,24 +558,16 @@ width: 50px;
   width: 40%;
   margin-top: 30px;
   margin-left: 28%;
-
-  /* height: inherit;
-  display:inline-block;
-	vertical-align:middle;
-	line-height:normal; */
 }
-
 
 .diseñoweb2{
   background-image: url(../img/fondos/seccion-diseño4-ver2.jpg);
   background-size: cover;
-    /* background-size: 100% 100%; */
     height: 600px;
 }
 
 .diseñoweb2 .container{
   width: 100%;
-/* margin-left: 1px; */
 }
 
 .cuadroflotante2{
