--- a/css/main.css
+++ b/css/main.css
@@ -1090,7 +1090,7 @@ margin: 45px;
     color: #ffffff;
     font-size: 23px;
     font-family: GeosansLight;
-    text-align: justify;
+    text-align: center;
     font-weight: 600;
     margin: 0px 40px;
   }
