--- a/css/main.css
+++ b/css/main.css
@@ -121,13 +121,15 @@ body > section,
 }
 
 .devider i {
-  color: #cccccc;
+  /* color: #cccccc; */
+  color: #fff;
 }
 
 .devider:before,
 .devider:after {
   content: "______________________";
-  color: #e6e8ea;
+  color: #fff;
+    /* color: #e6e8ea; */
     /* color: #0078d9; */
   position: relative;
   bottom: 6px;
@@ -151,12 +153,21 @@ body > section,
   position: fixed;
   width: 100%;
   z-index: 1100;
+  display:flex;
+   align-items: center
 }
 
 #preloader > img {
-  left: 47%;
-  position: absolute;
-  top: 48%;
+  width: 10%;
+  /* left: 47%; */
+    /* background-color: black; */
+
+     margin: auto;
+   /* margin-top: auto;
+  margin-bottom: auto; */
+   /* display: block; */
+  /* position: absolute; */
+  /* top: 48%; */
 }
 
 
@@ -226,11 +237,18 @@ body > section,
 
 }
 .navbar-nav li{
+
+}
+
+.navbar-nav li .li-last{
+  border-right:  1px solid #ffffff;
 }
 
 .navbar-nav a{
-
+  border-left:  1px solid #ffffff;
 }
+
+
 
 .navbar-nav li a {
   font-family: Rounded_Elegance;
@@ -252,7 +270,7 @@ body > section,
   	background-color: transparent;
 	/* background-color: #009ab4; */
 	/* border-top: 1px solid #32B0EE; */
-  border-top: 1px solid #ffffff;
+  /* border-top: 1px solid #ffffff; */
 	/* color: #f9ba48; */
   color: #D6D6D6;
 
@@ -473,10 +491,10 @@ width: 50px;
  src: url('../fonts/Romerio.ttf');
 }
 .features {
-/* padding-top: 10px; */
-  /* background-color: #ffffff; */
-  background-image: url(../img/fondos/seccion-quiensoy.jpg);
-  background-size: cover;
+    border-top: 1px solid rgba(78, 178, 213, 1);
+    background-color: rgba(78, 178, 213, 1);
+  /* background-image: url(../img/fondos/seccion-quiensoy.jpg);
+  background-size: cover; */
       /* background-size: 100% 100%; */
     height: 600px;
 /* background-attachment: fixed; */
@@ -495,6 +513,7 @@ width: 50px;
 }
 .quiensoy img{
   width: 100%;
+  /* position: center; */
   /* height: inherit;
   display:inline-block;
 	vertical-align:middle;
@@ -511,7 +530,7 @@ width: 50px;
 
       /* background-size: 100% 100%; */
     height: 600px;
-  /* background-position: center; */
+  background-position: 40%;
     /* height: 600px; */
         /* padding-bottom: 190px; */
 }
@@ -680,19 +699,27 @@ width: 50px;
 .works{
   /* background-color: #ffffff; */
   background-image: url(../img/fondos/seccion-trabajos.jpg);
+      border-top: 1px solid rgba(78, 178, 213, 1);
   /* background-size: 100% 100%; */
       background-size: cover;
       background-position: center;
           /* background-position:  30% 0; */
         height: 1400px;
     /* padding-top: 90px; */
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
 }
 .works .container{
   height:auto;
   background-size: cover;
 margin-top: 90px;
 }
+
+.works .devider:before,
+.works .devider:after,
+.works .devider i{
+color: #0078d9;
+}
+
 .work-filter {
   margin-bottom: 35px;
 }
@@ -979,10 +1006,11 @@ background-color: #ffffff;
 ==========================================*/
 
 .contact {
-  margin-top:200px;
+  border-top: 1px solid #fff;
 	padding-top: 70px;
-background-image: url(../img/slide-banner3-3-72px-1920x1280.jpg);
-background-size: cover;
+  background-color: rgba(78, 178, 213, 1);
+/* background-image: url(../img/slide-banner3-3-72px-1920x1280.jpg);
+background-size: cover; */
 /* clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%); */
 /* height: 900px; */
 /* background-color: rgba(2, 35, 52, 1); */
@@ -1067,7 +1095,8 @@ margin: 45px;
   }
 
   .features .sec-title h2{
-    color: #0078d9;
+    /* color: #0078d9; */
+    color:#fff;
     font-family: Montserrat-Regular;
   }
   .features .sec-sub-title h4{
@@ -1188,7 +1217,7 @@ label.error {
 }
 
 .espacio2{
-  padding-top: 150px;
+  padding-top: 20px;
 }
 
 .footer {
@@ -1196,8 +1225,9 @@ label.error {
   /* background-color: #00b2a6; */
   /* background-image: url(../img/fondos/footer-color.jpg);
   background-size: 100% 100%; */
+  /* background-color: #fff; */
   background-color: rgba(78, 178, 213, 1);
-  /* border-top: 5px solid #00b2a6; */
+  border-top: 1px solid #fff;
   color: #fff;
   /* clip-path: polygon(0 10%, 100% 0, 100% 100%, 0 100%); */
 
@@ -1288,7 +1318,8 @@ width: 35px;
 }
 
 .copyright {
-  color: #fff;
+  /* color: #0078d9; */
+    color: #fff;
   margin-top: 10px;
   margin-bottom: 0px;
 }
@@ -1301,4 +1332,8 @@ width: 35px;
   position: fixed;
   right: 25px;
   z-index: 9;
+}
+
+#back-top:hover {
+  color: #00b2a6;
 }
