--- a/css/main.css
+++ b/css/main.css
@@ -306,6 +306,7 @@ height: 1000px;
 }
 #slider .carousel-inner .item .slide1 {
   background-image: url(../img/slider/banner-inicio1.jpg);
+  background-position: 30%;
   height: 1000px;
   background-size: cover;
 }
